tests/rosetta/out/Smalltalk/cartesian-product-of-two-or-more-lists-1.out
/tmp/cartesian-product-of-two-or-more-lists-1.st:5: parse error, expected ']'
