tests/rosetta/out/Smalltalk/cartesian-product-of-two-or-more-lists-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| cart2 p x y llStr s i row j main |
cart2 := [:a :b | p := {}.
a do: [:x |.
b do: [:y |.
p := p copyWith: {x. y}.
].
.
].
.
p. ].
llStr := [:lst | s := '['.
i := 0.
[(i < ((lst size)))] whileTrue: [.
row := lst at: i.
s := (s + '[').
j := 0.
[(j < ((row size)))] whileTrue: [.
s := (s + ((row at: j asString))).
((j < ((((row size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
j := (j + 1).
].
.
s := (s + ']').
((i < ((((lst size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
i := (i + 1).
].
.
s := (s + ']').
s. ].
main := [ Transcript show: (llStr value: cart2 value: {1. 2} value: {3. 4}) printString; cr.
Transcript show: (llStr value: cart2 value: {3. 4} value: {1. 2}) printString; cr.
Transcript show: (llStr value: cart2 value: {1. 2} value: {}) printString; cr.
Transcript show: (llStr value: cart2 value: {} value: {1. 2}) printString; cr. ].
main value.
